# Maybe-It-Works

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.ac9e391  README.md  gitignore
calcgen/: main.cpp
data/: Config.txt  InputWeightFile  LinkFile  TypeFile  config.txt
src/: configuration.cpp  configuration.hpp  defines.hpp  main.cpp  misc.cpp  misc.hpp  neuron.cpp  neuron.hpp  neurone.cpp  neurone.hpp  parsing.cpp  parsing.hpp  types.hpp
